--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "nodemon server.js"
   },
   "keywords": ["gym", "workout", "tracker", "fitness"],
-  "author": "",
+  "author": "Juri Gregg",
   "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
