--- a/.github/workflows/deploy-s3.yml
+++ b/.github/workflows/deploy-s3.yml
@@ -24,7 +24,7 @@ jobs:
 
       - name: Sync public folder to S3
         run: |
-          aws s3 sync public/index.html s3://jurigregg-static-site/gym
+          aws s3 cp public/index.html s3://jurigregg-static-site/gym
 
       - name: Invalidate CloudFront
         run: |
